# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.1.16 (16 Apr 2010)

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.15.ebuild, +calculate-client-2.1.16.ebuild:
  Bump version. Remove previous.

  10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.4-r1.ebuild, -calculate-client-2.1.6.ebuild,
  -calculate-client-2.1.7.ebuild, -calculate-client-2.1.7-r1.ebuild,
  -files/calculate-client-2.1.7-r1.patch, -calculate-client-2.1.8.ebuild,
  -calculate-client-2.1.9.ebuild, -calculate-client-2.1.10.ebuild:
  Removed Calculate client which has version less 2.1.11.

*calculate-client-2.1.15 (08 Apr 2010)

  08 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.14.ebuild, +calculate-client-2.1.15.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.14 (07 Apr 2010)

  07 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.13.ebuild, +calculate-client-2.1.14.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.13 (07 Apr 2010)

  07 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.12.ebuild, +calculate-client-2.1.13.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.12 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.12.ebuild:
  Bump version.

  29 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-9999.ebuild:
  Add depend xdialog and kdialog to depend.

  11 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-9999.ebuild:
  Add IUSE="kde xfce gnome" to calculate-client-9999.

*calculate-client-2.1.11 (03 Mar 2010)
  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.11.ebuild:
  Bump version.

*calculate-client-2.1.9 (02 Dec 2009)
