@@ -1,7 +1,7 @@
 DIST calculate-client-2.1.11.tar.bz2 76735 RMD160 a31fff0135103bd32aee1c903eeae2b059e31c0b SHA1 1a1f05ab8bcc0aeb04bbf10371bec9aaad09cf18 SHA256 3f3410b697e9ebf4965bf0886b3ad8c40815c2ee464fdaaa90e220fb5b51f723
-DIST calculate-client-2.1.16.tar.bz2 91245 RMD160 f755a8b52fc2ec9e738e0b2dbd0d9441b8abb776 SHA1 dfe815aa6b24326e63ae4c9602888dd5c48fb54b SHA256 37ead651fcf58d731b124a2e5a9f53e53e52f4d633147c8f0efb1cdbe6eafff8
+DIST calculate-client-2.1.17.tar.bz2 91859 RMD160 376702b4535debc328276cbbd3bb5006a2dfff89 SHA1 9b3d5a5992d96b0104c17f062fcc62f671baf1d5 SHA256 f17c948f852a6d69736f7080a74d203c5720a12517f65265868d8b40ef9d83a8
 EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436b04310f744 SHA1 63b0908f95087157bd20f340b9c85aea13f46adf SHA256 a1c36d830d38872afaa8c2d691af7a9453008d2448a4f8dda5000e2880b2f57c
-EBUILD calculate-client-2.1.16.ebuild 1687 RMD160 b3fbfb7821d226f4887dda4fcaafb5aa86bd8ee4 SHA1 0b93a2b9e4196cf0805687ec5a22a4a8ee8cc3df SHA256 a7ac5fc92e5e7db86bcb398389354a828982bbcb33c49d19d563900ab1c08efd
+EBUILD calculate-client-2.1.17.ebuild 1688 RMD160 6366dcc3ff726b994bb9366d92cf6fad22403716 SHA1 c124fc4d5db102461288bbec3106b9baf147640c SHA256 3f67ebfbe6b138d8bd32238a22d59399e5177e71a77be0290b0ff1c04947e7f6
 EBUILD calculate-client-9999.ebuild 1644 RMD160 60e44af47cf785ac2990e61533c38cf0e859428a SHA1 58cd13f684b0f98b26538e27fbf467539663436d SHA256 01308bba3a9534a28d73bedd161d54ed4ec25977f4aa559387e9a6dd39e3dcbb
-MISC ChangeLog 2370 RMD160 c54d4748e6bda811efcfd2a80b64de6916d2cd83 SHA1 e8ad089a98762c06bbd9e9607b6cb5ed588d5501 SHA256 807a9cfede833f9eebc8c92e6878f146123108cda267212cba4bc46c3a39aa0e
+MISC ChangeLog 2572 RMD160 074469fa451b54062c8d246d594569bd85452c2f SHA1 2339c8d1259c9843756c6226a6a4e4a2fe0c2b11 SHA256 3768462290b2f49dafbcfe652248b550781133b16e19a2c22f7c05e6fc5465f7
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
