@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.1.10 (20 Apr 2010)
+
+  20 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-lib-2.1.10.ebuild:
+  Bump version.
+
 *calculate-lib-2.1.9 (16 Apr 2010)
 
   16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
